--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     
     <div id="passwordPopup" class="popup">
         <div class="popup-content">
-            <img src="sticker01.gif" alt="Milk and Mocha" width="300">
+            <img src="https://raw.githubusercontent.com/Wee2102/Uss2/main/sticker01.gif" alt="Milk and Mocha" width="300">
             <h2>Oyee Manisha Joshi !! </h2>
             <p> Please, IK Tu Gussa hai but ek bar padhle, Please !!</p>
             <label for="dob">💫First Movie Date. Yaad toh hai na ??</label><br><br>
@@ -230,8 +230,8 @@
             </ol>
         </div>
         <div class="actions">
-            <button onclick="acceptTerms()" class="happy"><img src="sticker02.gif" alt="Milk and Mocha" width="80"><br>I Accept</button>
-            <button onclick="rejectTerms()" class="sad"><img src="Sticker03.gif" alt="Milk and Mocha" width="80"><br> I Reject</button>
+            <button onclick="acceptTerms()" class="happy"><img src="https://raw.githubusercontent.com/Wee2102/Uss2/main/Sticker02.gif" alt="Milk and Mocha" width="80"><br>I Accept</button>
+            <button onclick="rejectTerms()" class="sad"><img src="https://raw.githubusercontent.com/Wee2102/Uss2/main/Sticker03.gif" alt="Milk and Mocha" width="80"><br> I Reject</button>
         </div>
     </div>
 
@@ -239,7 +239,7 @@
 
     <div id="thanksPopup" class="popup" style="display: none;">
         <div class="popup-content">
-            <img src="Sticker04.gif" alt="Milk and Mocha" width="200">
+            <img src="https://raw.githubusercontent.com/Wee2102/Uss2/main/Sticker04.gif" alt="Milk and Mocha" width="200">
             <h2>I Love you Manisha Joshi !! </h2>
             <p>Thank You, I love you Manisha Joshi. I know maine cheez kharaab kiya hai, but I promise main cheezein acchi toh nahi, but normal paka kardunga. And joh bhi likha hai maine paka rahunga.
             </p>
@@ -316,15 +316,15 @@ function sendSMS() {
         }
 
         const rejectOptions = [
-            { text: "Maan Jaa ! Please", img: "Sticker05.gif" },
-            { text: "Please Naa", img: "Sticker06.gif" },
-            { text: "I Love You naa.", img: "Sticker07.gif" },
-            { text: "Nash Kaat Lunga", img: "Sticker08.gif" },
-            { text: "Bht Marunga", img: "Sticker09.gif" },
-            { text: "Please, Please, Maan jaa", img: "Sticker10.gif" },
-            { text: "Mujhe Muka Muka mardena", img: "Sticker11.gif" },
-            { text: "Ms Pyari, Please", img: "Sticker12.gif" },
-            { text: "Meri Ms Happening hai na tu", img: "Sticker13.gif" }
+            { text: "Maan Jaa ! Please", img: "https://raw.githubusercontent.com/Wee2102/Uss2/main/Sticker05.gif" },
+            { text: "Please Naa", img: "https://raw.githubusercontent.com/Wee2102/Uss2/main/Sticker06.gif" },
+            { text: "I Love You naa.", img: "https://raw.githubusercontent.com/Wee2102/Uss2/main/Sticker07.gif" },
+            { text: "Nash Kaat Lunga", img: "https://raw.githubusercontent.com/Wee2102/Uss2/main/Sticker08.gif" },
+            { text: "Bht Marunga", img: "https://raw.githubusercontent.com/Wee2102/Uss2/main/Sticker09.gif" },
+            { text: "Please, Please, Maan jaa", img: "https://raw.githubusercontent.com/Wee2102/Uss2/main/Sticker10.gif" },
+            { text: "Mujhe Muka Muka mardena", img: "https://raw.githubusercontent.com/Wee2102/Uss2/main/Sticker11.gif" },
+            { text: "Ms Pyari, Please", img: "https://raw.githubusercontent.com/Wee2102/Uss2/main/Sticker12.gif" },
+            { text: "Meri Ms Happening hai na tu", img: "https://raw.githubusercontent.com/Wee2102/Uss2/main/Sticker13.gif" }
         ];
 
         function getRandomRejectOption() {
